AC_INIT(Makefile.am)

AM_INIT_AUTOMAKE(libavc1394, 0.3.1)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

# Check for the new version of libraw1394 with improved error handling
AC_CHECK_LIB(raw1394, raw1394_get_errcode,
             AC_DEFINE(RAW1394_V_0_9),
             AC_CHECK_LIB(raw1394, raw1394_reset_bus,
                          AC_DEFINE(RAW1394_V_0_8),
                          AC_MSG_ERROR(Please upgrade libraw1394 to version 0.8 or newer.)))

AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h sys/types.h unistd.h string.h netinet/in.h stdio.h)

#set the libtool shared library version numbers
lt_major=0
lt_revision=4
lt_age=0

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)

CFLAGS="$CFLAGS -Wall -Wunused"

Xsed="sed -e s/^X//"
LTLIBOBJS=`echo X"$LIBOBJS"|\
           [$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
AC_SUBST(LTLIBOBJS)

AC_OUTPUT(Makefile common/Makefile libavc1394/Makefile librom1394/Makefile test/Makefile)

