AC_PREREQ(2.52)
AC_INIT(libavc1394, 0.5.0, http://sourceforge.net/projects/libavc1394/)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL
AC_PROG_INSTALL

# Check for the new version of libraw1394 with improved error handling
AC_CHECK_LIB(raw1394, raw1394_get_errcode,
             AC_DEFINE(RAW1394_V_0_9),
             AC_CHECK_LIB(raw1394, raw1394_reset_bus,
                          AC_DEFINE(RAW1394_V_0_8),
                          AC_MSG_ERROR(Please upgrade libraw1394 to version 0.8 or newer.)))

AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h sys/types.h unistd.h string.h netinet/in.h stdio.h)

#set the libtool shared library version numbers
lt_major=2
lt_revision=0
lt_age=2

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)

CFLAGS="$CFLAGS -Wall -Wunused"

# what were these for
#Xsed="sed -e s/^X//"
#LTLIBOBJS=`echo X"$LIBOBJS"|\
#           [$Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*$,.lo,"]`
#AC_SUBST(LTLIBOBJS)

AC_OUTPUT([
Makefile 
common/Makefile 
libavc1394/Makefile 
librom1394/Makefile 
libplug1394/Makefile 
test/Makefile
])
